# enter-challenge

./: .gitignore  README.md  graph.md  rivet-project.txt
portfolio_advisor/: __init__.py  config.py  graph.py  main.py  models.py  pdf_export.py  prompts.py  pyproject.toml  requirements.txt  state.py  utils.py
portfolio_advisor/nodes/: __init__.py  compliance.py  drafter.py  ingestion.py  market_data.py  strategy.py
